WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
67775
[Qt] Fix "Unmatched parentheses are deprecated." warnings
https://bugs.webkit.org/show_bug.cgi?id=67775
Summary
[Qt] Fix "Unmatched parentheses are deprecated." warnings
Csaba Osztrogonác
Reported
2011-09-08 05:24:36 PDT
When you run build-webkit script, you always get this warning 6 times. (Reading /home/oszi/WebKit/Source/WebKit/qt/Api/DerivedSources.pro) ---> HEADER == /home/oszi/WebKit/Source/WebKit/qt/Api/qwebframe.h WARNING: /home/oszi/WebKit/Source/WebKit/qt/Api/DerivedSources.pro:59: Unmatched parentheses are deprecated. WARNING: /home/oszi/WebKit/Source/WebKit/qt/Api/DerivedSources.pro:59: Unmatched parentheses are deprecated. ---> HEADER == /home/oszi/WebKit/Source/WebKit/qt/Api/qwebview.h WARNING: /home/oszi/WebKit/Source/WebKit/qt/Api/DerivedSources.pro:59: Unmatched parentheses are deprecated. WARNING: /home/oszi/WebKit/Source/WebKit/qt/Api/DerivedSources.pro:59: Unmatched parentheses are deprecated. ---> HEADER == /home/oszi/WebKit/Source/WebKit/qt/Api/qwebpluginfactory.h WARNING: /home/oszi/WebKit/Source/WebKit/qt/Api/DerivedSources.pro:59: Unmatched parentheses are deprecated. WARNING: /home/oszi/WebKit/Source/WebKit/qt/Api/DerivedSources.pro:59: Unmatched parentheses are deprecated. It might be fixed in the pro file or it might be a qmake bug.
Attachments
proposed workaround
(3.04 KB, patch)
2011-09-12 03:24 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zeno Albisser
Comment 1
2011-09-12 03:12:25 PDT
This is caused by reading header files that contain function declarations that spread over multiple lines using the cat() call in .pro files. The easiest workaround would be to write function declarations in the affected files always on a single line. For a proper fix we would need to add functionality to qmake.
Csaba Osztrogonác
Comment 2
2011-09-12 03:24:05 PDT
Created
attachment 107035
[details]
proposed workaround
WebKit Review Bot
Comment 3
2011-09-12 03:26:31 PDT
Attachment 107035
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit/qt/Api/qwebframe.h', u'Sourc..." exit_code: 1 Source/WebKit/qt/Api/qwebview.h:64: The parameter name "request" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/qt/Api/qwebview.h:64: The parameter name "operation" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/qt/Api/qwebframe.h:127: The parameter name "request" adds no information, so it should be removed. [readability/parameter_name] [5] Source/WebKit/qt/Api/qwebframe.h:127: The parameter name "operation" adds no information, so it should be removed. [readability/parameter_name] [5] Total errors found: 4 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Zoltan Herczeg
Comment 4
2011-09-12 03:37:18 PDT
Comment on
attachment 107035
[details]
proposed workaround The Qt API has a different style than WebKit, so the warnings of the style checker can be ignored.
WebKit Review Bot
Comment 5
2011-09-12 04:37:15 PDT
Comment on
attachment 107035
[details]
proposed workaround Rejecting
attachment 107035
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 Last 500 characters of output: e2f4da75c0181c0dbc27b418a51380b53ed09346
r94953
= e822bceff99dae95dd27fe318b2aebd379604f74 Done rebuilding .git/svn/refs/remotes/origin/master/.rev_map.268f45cc-cd09-0410-ab3c-d52691b4dbfc First, rewinding head to replay your work on top of it... Fast-forwarded master to refs/remotes/origin/master. Updating chromium port dependencies using gclient... ________ running '/usr/bin/python gyp_webkit' in '/mnt/git/webkit-commit-queue/Source/WebKit/chromium' Updating webkit projects from gyp files... Full output:
http://queues.webkit.org/results/9634946
Csaba Osztrogonác
Comment 6
2011-09-12 11:11:36 PDT
Landed in
http://trac.webkit.org/changeset/94968
Csaba Osztrogonác
Comment 7
2011-09-12 11:12:39 PDT
(In reply to
comment #1
)
> This is caused by reading header files that contain function declarations that spread over multiple lines using the cat() call in .pro files. > The easiest workaround would be to write function declarations in the affected files always on a single line. > For a proper fix we would need to add functionality to qmake.
Thanks, it works.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug