[Qt] Fix "Unmatched parentheses are deprecated." warnings https://bugs.webkit.org/show_bug.cgi?id=67775

Reviewed by Zoltan Herczeg.

Modify function declarations to single line to make qmake happier.

* Api/qwebframe.h:
* Api/qwebpluginfactory.h:
* Api/qwebview.h:

Canonical link: https://commits.webkit.org/83853@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94968 268f45cc-cd09-0410-ab3c-d52691b4dbfc